update: use nexus

--- a/src/pages/result/[ws]-[type]/index.astro
+++ b/src/pages/result/[ws]-[type]/index.astro
@@ -1,16 +1,15 @@
 ---
 import Table from "@/components/data-table";
+
 import {
   createTemporaryDirectory,
   digital_reconstruction_result,
   network_simulation_result,
-  ensureArray,
   experimental_data_result,
-  fetch_resource,
-  writeFileToDirectory,
+  processPageType,
 } from "@/api/nexus";
 import Layout from "@/layouts/result-layout.astro";
-import { getPageMapping } from "@/lib/shared";
+import { getPageTitleMapping } from "@/lib/shared";
 
 export async function getStaticPaths() {
   const pages: Array<{
@@ -69,206 +68,35 @@ export async function getStaticPaths() {
     spindle_like_oscillations_control_vs_gap_junctions_removed,
   };
 
-  // const path = await createTemporaryDirectory("artifacts");
+  const path = await createTemporaryDirectory("artifacts");
   for (const k of Object.keys(experimental_data)) {
-    const final_data = [];
+    const final_data: any[] = [];
     const dash = experimental_data[k as keyof typeof experimental_data];
-    const columns = dash["head"]["vars"];
     try {
-      const results = dash["results"]["bindings"].map((o: any) => {
-        return Object.entries(o)
-          .map(([key, val]) => ({
-            [key]: (val as unknown as any).value,
-          }))
-          .reduce((acc, cur) => ({ ...acc, ...cur }));
-      });
-      for (const res of results) {
-        const resource = await fetch_resource(res.self);
-        // if ("distribution" in resource) {
-        //   const artifacts = [];
-        //   for (const dist of ensureArray(resource.distribution)) {
-        //     const binary = await fetch_resource(dist.contentUrl, "blob");
-        //     const name = dist["name"];
-        //     const self = resource["_self"];
-        //     const type = dist["encodingFormat"];
-        //     const size = dist["contentSize"]["value"];
-        //     const url = dist.contentUrl;
-        //     await writeFileToDirectory(`${path}/${name}`, Buffer.from(binary));
-        //     artifacts.push({
-        //       name,
-        //       self,
-        //       type,
-        //       size,
-        //       url,
-        //       path: `${path}/${name}`,
-        //     });
-        //   }
-        //   final_data.push({
-        //     ...res,
-        //     name: resource.name,
-        //     resource,
-        //     artifacts,
-        //   });
-        // } else {
-        // }
-        final_data.push({
-          ...res,
-          resource,
-          binaries: null,
-        });
-      }
-
-      pages.push({
-        columns: columns
-          .filter((col: string) => !["self", "resource"].includes(col))
-          .map((col: string) => ({
-            id: col,
-            key: col,
-            name: col,
-            enableSorting: true,
-            enableHiding: true,
-          })),
-        rows: final_data,
-        ws: "exp_data",
-        type: k,
-      });
+      await processPageType(dash, path, final_data, pages, k, "exp_data");
     } catch (error) {
-      console.error("@@error", error);
+      console.error("[error][experimental_data]", error);
     }
   }
 
   for (const k of Object.keys(digital_reconstruction)) {
-    const final_data = [];
+    const final_data: any[] = [];
     const dash =
       digital_reconstruction[k as keyof typeof digital_reconstruction];
-    const columns = dash["head"]["vars"];
     try {
-      const results = dash["results"]["bindings"].map((o: any) => {
-        return Object.entries(o)
-          .map(([key, val]) => ({
-            [key]: (val as unknown as any).value,
-          }))
-          .reduce((acc, cur) => ({ ...acc, ...cur }));
-      });
-      for (const res of results) {
-        const resource = await fetch_resource(res.self);
-        // if ("distribution" in resource) {
-        //   const artifacts = [];
-        //   for (const dist of ensureArray(resource.distribution)) {
-        //     const binary = await fetch_resource(dist.contentUrl, "blob");
-        //     const name = dist["name"];
-        //     const self = resource["_self"];
-        //     const type = dist["encodingFormat"];
-        //     const size = dist["contentSize"]["value"];
-        //     const url = dist.contentUrl;
-        //     await writeFileToDirectory(`${path}/${name}`, Buffer.from(binary));
-        //     artifacts.push({
-        //       name,
-        //       self,
-        //       type,
-        //       size,
-        //       url,
-        //       path: `${path}/${name}`,
-        //     });
-        //   }
-        //   final_data.push({
-        //     ...res,
-        //     name: resource.name,
-        //     resource,
-        //     artifacts,
-        //   });
-        // } else {
-        // }
-        final_data.push({
-          ...res,
-          resource,
-          binaries: null,
-        });
-      }
-
-      pages.push({
-        columns: columns
-          .filter((col: string) => !["self", "resource"].includes(col))
-          .map((col: string) => ({
-            id: col,
-            key: col,
-            name: col,
-            enableSorting: true,
-            enableHiding: true,
-          })),
-        rows: final_data,
-        ws: "dig_recons",
-        type: k,
-      });
+      await processPageType(dash, path, final_data, pages, k, "dig_recons");
     } catch (error) {
-      console.error("@@error", error);
+      console.error("[error][digital_reconstruction]", error);
     }
   }
 
   for (const k of Object.keys(network_simulation)) {
-    const final_data = [];
+    const final_data: any[] = [];
     const dash = network_simulation[k as keyof typeof network_simulation];
-    const columns = dash["head"]["vars"];
     try {
-      const results = dash["results"]["bindings"].map((o: any) => {
-        return Object.entries(o)
-          .map(([key, val]) => ({
-            [key]: (val as unknown as any).value,
-          }))
-          .reduce((acc, cur) => ({ ...acc, ...cur }));
-      });
-      for (const res of results) {
-        const resource = await fetch_resource(res.self);
-        // if ("distribution" in resource) {
-        //   const artifacts = [];
-        //   for (const dist of ensureArray(resource.distribution)) {
-        //     const binary = await fetch_resource(dist.contentUrl, "blob");
-        //     const name = dist["name"];
-        //     const self = resource["_self"];
-        //     const type = dist["encodingFormat"];
-        //     const size = dist["contentSize"]["value"];
-        //     const url = dist.contentUrl;
-        //     await writeFileToDirectory(`${path}/${name}`, Buffer.from(binary));
-        //     artifacts.push({
-        //       name,
-        //       self,
-        //       type,
-        //       size,
-        //       url,
-        //       path: `${path}/${name}`,
-        //     });
-        //   }
-        //   final_data.push({
-        //     ...res,
-        //     name: resource.name,
-        //     resource,
-        //     artifacts,
-        //   });
-        // } else {
-        // }
-        final_data.push({
-          ...res,
-          resource,
-          binaries: null,
-        });
-      }
-
-      pages.push({
-        columns: columns
-          .filter((col: string) => !["self", "resource"].includes(col))
-          .map((col: string) => ({
-            id: col,
-            key: col,
-            name: col,
-            enableSorting: true,
-            enableHiding: true,
-          })),
-        rows: final_data,
-        ws: "network_sim",
-        type: k,
-      });
+      await processPageType(dash, path, final_data, pages, k, "network_sim");
     } catch (error) {
-      console.error("@@error", error);
+      console.error("[error][network_simulation]", error);
     }
   }
 
@@ -282,7 +110,7 @@ export async function getStaticPaths() {
 const { ws, type } = Astro.params;
 const { columns, rows } = Astro.props;
 
-const tile = getPageMapping(ws, type);
+const tile = getPageTitleMapping(ws, type);
 ---
 
 <Layout title={tile}>
