update: add synthetic-axonal portal

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,12 +3,8 @@ import "@/styles/globals.css";
 import Prose from "@/components/Prose.astro";
 import * as studio from "@/markdown/studio-art.md";
 import Layout from "@/layouts/layout.astro";
-import { Image } from "astro:assets";
-import { Card } from "@/components/ui/card";
-import DigitalReconstraction from "../images/digital_reconstraction_workflow.png";
-import SimulationNetworkActivity from "../images/simulation_network_activity.gif";
 
-const title = "Thalamic control of sensory processing and spindles in a biophysical somatosensory thalamoreticular circuit model of wakefulness and sleep";
+const title = "Generating neocortex connectome using synthetic axonal morphologies";
 ---
 
 <Layout title={title}>
