--- a/src/pages/result/[ws]-[type]/index.astro
+++ b/src/pages/result/[ws]-[type]/index.astro
@@ -22,13 +22,9 @@ export async function getStaticPaths() {
     }>;
     rows: any[];
   }> = [];
-  const [analysis_results, configurations, input_data, notebooks] =
-    data_dashboards_result;
+  const [neuron_morphology] = data_dashboards_result;
   const data = {
-    analysis_results,
-    configurations,
-    input_data,
-    notebooks,
+    neuron_morphology,
   };
 
   const _path = `${process.cwd()}/public/artifacts`;
@@ -37,20 +33,10 @@ export async function getStaticPaths() {
 
   for (const k of Object.keys(data)) {
     const final_data: any[] = [];
-    const res_path = await createTemporaryDirectory(
-      `${resource_folder}/${k}`
-    );
+    const res_path = await createTemporaryDirectory(`${resource_folder}/${k}`);
     const dash = data[k as keyof typeof data];
     try {
-      await processPageType(
-        dash,
-        path,
-        res_path,
-        final_data,
-        pages,
-        k,
-        "data"
-      );
+      await processPageType(dash, path, res_path, final_data, pages, k, "data");
     } catch (error) {
       console.error("[error][data]", error);
     }
