update: fix not found dist

--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -8,6 +8,6 @@ import { Button } from "@/components/ui/button";
     <Image src="/logo.webp" alt="obpp" width="152" height="41" />
   </a>
   <Button variant="secondary" , className="rounded-none bg-transparent text-white hover:text-blue-600 h-full px-10 text-lg font-light">
-    <a href="/result/data-analysis_results">Portal results</a>
+    <a href="/result/data-all">Portal results</a>
   </Button>
 </header>
