update: restructure the articats folder

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import { Card } from "@/components/ui/card";
 import DigitalReconstraction from "../images/digital_reconstraction_workflow.png";
 import SimulationNetworkActivity from "../images/simulation_network_activity.gif";
 
-const title = "Thalamic control of sensory processing and spindles in a biophysical somatosensory thalamoreticular circuit model of wakefulness and sleep";
+const title = studio.frontmatter.title;
 ---
 
 <Layout title={title}>
